--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Gestao360
+
+# Banco de Dados
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=root
+spring.datasource.password=root
+debug=true
+
+# spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
