Criação da Class PostagemForum da Pasta Model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Gestao360
 
 # Banco de Dados
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/gestao360
 spring.datasource.username=root
 spring.datasource.password=root
 debug=true
